# random-symplectic

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: bibstyle.csl  dnary.md  dnary_arithmetic.md  index.md  installation.md  references.bib  symplectic.md
src/randomsymplectic/: __init__.py  dnary_arithmetic.py  dnary_array.py  symplectic_array.py  validation.py
tests/: test_dnary_array.py  test_dnary_logic.py  test_inheritance.py  test_symplectic.py
